os/bluestore: invoke BlueFS rebalance on repair

This will trigger BlueFS space rebalance when repairing hence allocating
additional space immediately.

Workaround for: https://tracker.ceph.com/issues/36268

Signed-off-by: Igor Fedotov <ifedotov@suse.com>